# Dtunes

./: README.md  com.github.bflanagin.Dtunes.json  meson.build
data/: com.github.bflanagin.Dtunes.appdata.xml.in  com.github.bflanagin.Dtunes.desktop.in  com.github.bflanagin.Dtunes.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: dtunes.gresource.xml  main.vala  meson.build
